# ISBN_searcher

./: README.md  main.py  pyproject.toml
searcher/provider/: bookfinder.py  local.py  openlibrary.py
